~fix bug in findsamestring.cpp

--- a/findsamestring/makefile
+++ b/findsamestring/makefile
@@ -1,5 +1,5 @@
 findsamestring: findsamestring.o
-	g++ -Wall findsamestring.o -o findsamestring
+	g++ -Wall -g findsamestring.o -o findsamestring
 
 findsamestring.o: findsamestring.cpp
 	g++ -Wall -g -c findsamestring.cpp -I ..\lib
